syntax = "proto3";

option go_package = "maum-backend-protobuf/gen/go/protos/staff/v1";

package v1;

service StaffService{
  rpc CreateStaff (CreateStaffRequest) returns (CreateStaffResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
}

message CreateStaffRequest {
  string email = 1;
  string password = 2;
  string en_name = 3;
}

message CreateStaffResponse {}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string uuid = 1;
}

message UpdatePasswordRequest {
  string uuid = 1;
  string origin_password = 2;
  string update_password = 3;
  string check_password = 4;
}

message UpdatePasswordResponse {}